--- a/src/Configure.vcxproj
+++ b/src/Configure.vcxproj
@@ -4,34 +4,37 @@
     <ProjectConfiguration Include="Debug|Win32">
       <Configuration>Debug</Configuration>
       <Platform>Win32</Platform>
-      <PlatformName>x86</PlatformName>
     </ProjectConfiguration>
     <ProjectConfiguration Include="Release|Win32">
       <Configuration>Release</Configuration>
       <Platform>Win32</Platform>
-      <PlatformName>x86</PlatformName>
     </ProjectConfiguration>
     <ProjectConfiguration Include="Debug|x64">
       <Configuration>Debug</Configuration>
       <Platform>x64</Platform>
-      <PlatformName>x64</PlatformName>
     </ProjectConfiguration>
     <ProjectConfiguration Include="Release|x64">
       <Configuration>Release</Configuration>
       <Platform>x64</Platform>
-      <PlatformName>x64</PlatformName>
     </ProjectConfiguration>
     <ProjectConfiguration Include="Release|ARM64">
       <Configuration>Release</Configuration>
       <Platform>ARM64</Platform>
-      <PlatformName>Arm64</PlatformName>
     </ProjectConfiguration>
     <ProjectConfiguration Include="Debug|ARM64">
       <Configuration>Debug</Configuration>
       <Platform>ARM64</Platform>
-      <PlatformName>Arm64</PlatformName>
     </ProjectConfiguration>
   </ItemGroup>
+  <PropertyGroup Condition="'$(Platform)' == 'Win32'">
+    <PlatformType>x86</PlatformType>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Platform)' == 'x64'">
+    <PlatformType>x64</PlatformType>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Platform)' == 'ARM64'">
+    <PlatformType>arm64</PlatformType>
+  </PropertyGroup>
   <PropertyGroup Label="Globals">
     <SccProjectName />
     <SccLocalPath />
@@ -57,25 +60,11 @@
     <_ProjectFileVersion>10.0.40219.1</_ProjectFileVersion>
     <LinkIncremental Condition="'$(Configuration)'=='Debug'">true</LinkIncremental>
     <LinkIncremental Condition="'$(Configuration)'=='Release'">false</LinkIncremental>
-    <TargetName>Configure.$(PlatformName)</TargetName>
-    <OutputFolder>..\Artifacts\$(Configuration)\$(PlatformName)</OutputFolder>
+    <TargetName>Configure.$(PlatformType)</TargetName>
+    <OutputFolder>..\Artifacts\$(Configuration)\$(PlatformType)</OutputFolder>
     <OutDir>$(OutputFolder)\bin\</OutDir>
     <IntDir>$(OutputFolder)\obj\</IntDir>
   </PropertyGroup>
-  <ItemDefinitionGroup>
-    <ClCompile>
-      <PrecompiledHeaderOutputFile>$(OutputFolder)\Configure.pch</PrecompiledHeaderOutputFile>
-      <AssemblerListingLocation>$(OutputFolder)\obj\</AssemblerListingLocation>
-      <ObjectFileName>$(OutputFolder)\obj\</ObjectFileName>
-      <ProgramDataBaseFileName>$(OutDir)\Configure</ProgramDataBaseFileName>
-    </ClCompile>
-    <Link>
-      <ProgramDatabaseFile>$(OutputFolder)\bin\Configure.$(PlatformName).pdb</ProgramDatabaseFile>
-    </Link>
-    <Midl>
-      <TypeLibraryName>$(OutputFolder)\obj\Configure.tlb</TypeLibraryName>
-    </Midl>
-  </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)'=='Debug'">
     <ClCompile>
       <AdditionalOptions>/Zm200 %(AdditionalOptions)</AdditionalOptions>
