--- a/src/Configure.vcxproj
+++ b/src/Configure.vcxproj
@@ -60,7 +60,7 @@
     <_ProjectFileVersion>10.0.40219.1</_ProjectFileVersion>
     <LinkIncremental Condition="'$(Configuration)'=='Debug'">true</LinkIncremental>
     <LinkIncremental Condition="'$(Configuration)'=='Release'">false</LinkIncremental>
-    <TargetName>Configure.$(PlatformType)</TargetName>
+    <TargetName>Configure.$(Configuration).$(PlatformType)</TargetName>
     <OutputFolder>..\Artifacts\$(Configuration)\$(PlatformType)</OutputFolder>
     <OutDir>$(OutputFolder)\bin\</OutDir>
     <IntDir>$(OutputFolder)\obj\</IntDir>
