--- a/src/Configure.rc
+++ b/src/Configure.rc
@@ -98,51 +98,49 @@ STYLE DS_SETFONT | WS_CHILD | WS_DISABLED | WS_CAPTION
 CAPTION "Target Setup"
 FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
-    GROUPBOX        "Build type setup",IDC_STATIC,7,7,304,73
-    LTEXT           "Dynamic (DLL) Builds",IDC_STATIC,13,19,68,8
-    LTEXT           "Static Builds",IDC_STATIC,153,19,40,8
-    CONTROL         "Dynamic Multi-threaded DLL runtimes",IDC_PROJECT_DYNAMIC_MT,
-                    "Button",BS_AUTORADIOBUTTON | WS_GROUP,15,33,133,10
-    CONTROL         "Static Multi-threaded DLL runtimes",IDC_PROJECT_STATIC_MT_DLL,
-                    "Button",BS_AUTORADIOBUTTON,153,33,124,10
-    CONTROL         "Static Multi-threaded runtimes",IDC_PROJECT_STATIC_MT,
-                    "Button",BS_AUTORADIOBUTTON,153,48,109,10
-    GROUPBOX        "Build options",IDC_STATIC,7,90,304,145
-    LTEXT           "Quantum depth",IDC_STATIC,205,102,55,8
-    COMBOBOX        IDC_QUANTUM_DEPTH,260,100,47,50,CBS_DROPDOWNLIST |
+    GROUPBOX        "Build type setup",IDC_STATIC,5,5,304,45
+    CONTROL         "Dynamic (DLL) build",IDC_PROJECT_DYNAMIC,
+                    "Button",BS_AUTORADIOBUTTON | WS_GROUP,15,20,133,10
+    CONTROL         "Static build",IDC_PROJECT_STATIC,
+                    "Button",BS_AUTORADIOBUTTON,153,20,124,10
+    CONTROL         "Statically link C/C++ runtime library",IDC_LINK_RUNTIME,"Button",BS_AUTOCHECKBOX |
+                     WS_TABSTOP,15,35,133,10
+    GROUPBOX        "Build options",IDC_STATIC,5,55,304,150
+    LTEXT           "Quantum depth",IDC_STATIC,205,70,55,8
+    COMBOBOX        IDC_QUANTUM_DEPTH,260,68,45,50,CBS_DROPDOWNLIST |
                     WS_VSCROLL | WS_TABSTOP
-    LTEXT           "Platform",IDC_STATIC,228,117,70,8
-    COMBOBOX        IDC_PLATFORM,260,115,47,40,CBS_DROPDOWNLIST | WS_VSCROLL |
+    LTEXT           "Platform",IDC_STATIC,228,85,70,8
+    COMBOBOX        IDC_PLATFORM,260,83,45,40,CBS_DROPDOWNLIST | WS_VSCROLL |
                     WS_TABSTOP
-    LTEXT           "Visual Studio Version",IDC_STATIC,188,132,70,8
-    COMBOBOX        IDC_VISUALSTUDIO,260,130,47,40,CBS_DROPDOWNLIST | WS_VSCROLL |
+    LTEXT           "Visual Studio Version",IDC_STATIC,188,100,70,8
+    COMBOBOX        IDC_VISUALSTUDIO,260,98,45,40,CBS_DROPDOWNLIST | WS_VSCROLL |
                     WS_TABSTOP
-    LTEXT           "Policy config",IDC_STATIC,214,147,70,8
-    COMBOBOX        IDC_POLICYCONFIG,260,145,47,40,CBS_DROPDOWNLIST | WS_VSCROLL |
+    LTEXT           "Policy config",IDC_STATIC,214,115,70,8
+    COMBOBOX        IDC_POLICYCONFIG,260,113,45,40,CBS_DROPDOWNLIST | WS_VSCROLL |
                     WS_TABSTOP
     CONTROL         "Enable HDRI",IDC_HDRI,"Button",BS_AUTOCHECKBOX |
-                    WS_TABSTOP,15,100,70,10
+                    WS_TABSTOP,15,70,70,10
     CONTROL         "Enable OpenMP",IDC_OPEN_MP,"Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP,15,115,70,10
+                    BS_AUTOCHECKBOX | WS_TABSTOP,15,85,70,10
     CONTROL         "Enable OpenCL",IDC_OPEN_CL,"Button",BS_AUTOCHECKBOX |
-                    WS_TABSTOP,15,130,70,10
+                    WS_TABSTOP,15,100,70,10
     CONTROL         "Enable Distributed Pixel Cache",IDC_ENABLE_DPC,"Button",BS_AUTOCHECKBOX |
-                    WS_TABSTOP,15,145,110,10
+                    WS_TABSTOP,15,115,110,10
     CONTROL         "Use zero configuration",
                     IDC_ZERO_CONFIGURATION_SUPPORT,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,
-                    15,160,90,10
+                    15,130,90,10
     CONTROL         "Include all demo, test, appl, and contrib directories",
                     IDC_INCLUDE_OPTIONAL,"Button",BS_AUTOCHECKBOX |
-                    WS_TABSTOP,15,175,170,10
+                    WS_TABSTOP,15,145,170,10
     CONTROL         "Build projects that are not compatible with the Apache 2.0 license",
                     IDC_INCLUDE_INCOMPATIBLE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,
-                    15,190,220,10
+                    15,160,220,10
     CONTROL         "Exclude deprecated methods",
                     IDC_EXCLUDE_DEPRECATED,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,
-                    15,205,105,10
+                    15,175,105,10
     CONTROL         "Use registry settings or hard-coded paths to locate installed components",
                     IDC_INSTALLED_SUPPORT,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,
-                    15,220,240,10
+                    15,190,240,10
 END
 
 IDD_FINISHED_PAGE DIALOG  0, 0, 318, 233
