--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,13 +6,13 @@ on:
 name: main
 jobs:
   build:
-    name: Build
+    name: Build (${{ matrix.architecture }}, ${{ matrix.configuration }})
     runs-on: windows-2022
 
     strategy:
       fail-fast: false
       matrix:
-        platform: [ x86, x64, arm64 ]
+        architecture: [ x86, x64, arm64 ]
         configuration: [ Debug, Release ]
 
     steps:
@@ -23,4 +23,4 @@ jobs:
       shell: cmd
       run: |
         call "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\Common7\Tools\VsDevCmd.bat"
-        msbuild Configure.sln /m /t:Rebuild /p:Configuration=${{matrix.configuration}},Platform=${{matrix.platform}} 
+        msbuild Configure.sln /m /t:Rebuild /p:Configuration=${{matrix.configuration}},Platform=${{matrix.architecture}}
