--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,14 +4,13 @@ on:
 name: release
 jobs:
   build:
-    name: Build
+    name: Build (${{ matrix.architecture }})
     runs-on: windows-2022
 
     strategy:
       fail-fast: false
       matrix:
-        platform: [ x86, x64, arm64 ]
-        configuration: [ Debug, Release ]
+        architecture: [ x86, x64, arm64 ]
 
     steps:
     - name: Checkout
@@ -21,13 +20,13 @@ jobs:
       shell: cmd
       run: |
         call "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\Common7\Tools\VsDevCmd.bat"
-        msbuild Configure.sln /m /t:Rebuild /p:Configuration=${{ matrix.Configuration }},Platform=${{ matrix.platform }}
+        msbuild Configure.sln /m /t:Rebuild /p:Configuration=${{ matrix.architecture }},Platform=Release
 
     - name: Upload executable
       uses: actions/upload-artifact@v4
       with:
-        name: Configure.${{ matrix.Configuration }}.${{ matrix.platform }}
-        path: Artifacts/${{ matrix.Configuration }}/${{ matrix.platform}}/bin
+        name: Configure.Release.${{ matrix.architecture }}
+        path: Artifacts/Release/${{ matrix.architecture}}/bin
 
   release:
     name: Release
@@ -58,7 +57,7 @@ jobs:
         client-id: ${{ secrets.AZURE_CLIENT_ID }}
         tenant-id: ${{ secrets.AZURE_TENANT_ID }}
         subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-      
+
     - name: Sign executables
       run: sign code trusted-signing *.exe `
         --trusted-signing-account ImageMagick `
@@ -66,6 +65,11 @@ jobs:
         --trusted-signing-endpoint https://eus.codesigning.azure.net `
         --verbosity information
       working-directory: ${{ github.workspace }}/Artifacts
+
+    - name: Create Configs archive
+      shell: cmd
+      run: |
+        powershell -Command "Compress-Archive -Path 'Configs' -DestinationPath 'Configs.zip'"
 
     - name: Set release number
       shell: bash
@@ -85,9 +89,7 @@ jobs:
         name: ${{ env.release }}
         tag_name: ${{ env.release }}
         files: |
-          ${{ github.workspace }}/Artifacts/Configure.Debug.x64.exe
-          ${{ github.workspace }}/Artifacts/Configure.Debug.arm64.exe
-          ${{ github.workspace }}/Artifacts/Configure.Debug.x86.exe
           ${{ github.workspace }}/Artifacts/Configure.Release.x64.exe
           ${{ github.workspace }}/Artifacts/Configure.Release.arm64.exe
           ${{ github.workspace }}/Artifacts/Configure.Release.x86.exe
+          ${{ github.workspace }}/Configs.zip
