--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,7 +20,7 @@ jobs:
       shell: cmd
       run: |
         call "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\Common7\Tools\VsDevCmd.bat"
-        msbuild Configure.sln /m /t:Rebuild /p:Configuration=${{ matrix.architecture }},Platform=Release
+        msbuild Configure.sln /m /t:Rebuild /p:Configuration=Release,Platform=${{ matrix.architecture }}
 
     - name: Upload executable
       uses: actions/upload-artifact@v4
