Added nasm executable to the project and artifacts.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -89,6 +89,7 @@ jobs:
         name: ${{ env.release }}
         tag_name: ${{ env.release }}
         files: |
+          ${{ github.workspace }}/Artifacts/bin/nasm.exe
           ${{ github.workspace }}/Artifacts/Configure.Release.x64.exe
           ${{ github.workspace }}/Artifacts/Configure.Release.arm64.exe
           ${{ github.workspace }}/Artifacts/Configure.Release.x86.exe
