--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -69,7 +69,7 @@ jobs:
     - name: Create Configs archive
       shell: cmd
       run: |
-        powershell -Command "Compress-Archive -Path 'Configs' -DestinationPath 'Configs.zip'"
+        powershell -Command "Compress-Archive -Path 'files\*' -DestinationPath 'files.zip'"
 
     - name: Set release number
       shell: bash
@@ -93,4 +93,4 @@ jobs:
           ${{ github.workspace }}/Artifacts/Configure.Release.x64.exe
           ${{ github.workspace }}/Artifacts/Configure.Release.arm64.exe
           ${{ github.workspace }}/Artifacts/Configure.Release.x86.exe
-          ${{ github.workspace }}/Configs.zip
+          ${{ github.workspace }}/files.zip
