--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -69,7 +69,7 @@ jobs:
     - name: Create Configs archive
       shell: cmd
       run: |
-        powershell -Command "Compress-Archive -Path 'files\*' -DestinationPath 'files.zip'"
+        powershell -Command "Compress-Archive -Path 'Configs','OpenCL','PerlMagick','nasm.exe','package.version.h.in' -DestinationPath 'files.zip'"
 
     - name: Set release number
       shell: bash
@@ -89,7 +89,6 @@ jobs:
         name: ${{ env.release }}
         tag_name: ${{ env.release }}
         files: |
-          ${{ github.workspace }}/Artifacts/bin/nasm.exe
           ${{ github.workspace }}/Artifacts/Configure.Release.x64.exe
           ${{ github.workspace }}/Artifacts/Configure.Release.arm64.exe
           ${{ github.workspace }}/Artifacts/Configure.Release.x86.exe
