--- a/src/Configure.vcxproj
+++ b/src/Configure.vcxproj
@@ -111,7 +111,7 @@
       <AdditionalDependencies>%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalDependencies>rpcrt4.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <SuppressStartupBanner>true</SuppressStartupBanner>
-      <SubSystem>Windows</SubSystem>
+      <SubSystem>Console</SubSystem>
     </Link>
     <Midl>
       <PreprocessorDefinitions>NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
@@ -126,6 +126,7 @@
   <ItemGroup>
     <ClCompile Include="Config.cpp" />
     <ClCompile Include="Configs.cpp" />
+    <ClCompile Include="Main.cpp" />
     <ClCompile Include="Options.cpp" />
     <ClCompile Include="InstallerConfig.cpp" />
     <ClCompile Include="MagickBaseConfig.cpp" />
