--- a/Installer/Inno/config.isx.in
+++ b/Installer/Inno/config.isx.in
@@ -4,3 +4,4 @@
 #define public MagickPackageFullVersionText "@MAGICK_LIB_VERSION_TEXT@@PACKAGE_VERSION_ADDENDUM@"
 #define public MagickPackageReleaseDate "@PACKAGE_RELEASE_DATE@"
 #define public QuantumDepth "@QUANTUM_DEPTH@"
+#define public RootDirectory "..\..\..\"
