--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,7 +4,7 @@ on:
 name: release
 jobs:
   build:
-    name: Build (${{ matrix.architecture }})
+    name: Build (${{matrix.architecture}})
     runs-on: windows-2022
 
     strategy:
@@ -20,13 +20,13 @@ jobs:
       shell: cmd
       run: |
         call "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\Common7\Tools\VsDevCmd.bat"
-        msbuild Configure.sln /m /t:Rebuild /p:Configuration=Release,Platform=${{ matrix.architecture }}
+        msbuild Configure.sln /m /t:Rebuild /p:Configuration=Release,Platform=${{matrix.architecture}}
 
     - name: Upload executable
       uses: actions/upload-artifact@v4
       with:
-        name: Configure.Release.${{ matrix.architecture }}
-        path: Artifacts/Release/${{ matrix.architecture}}/bin
+        name: Configure.Release.${{matrix.architecture}}
+        path: Artifacts/Release/${{matrix.architecture}}/bin
 
   release:
     name: Release
@@ -44,7 +44,7 @@ jobs:
     - uses: actions/download-artifact@v4
       name: Download executables
       with:
-        path: ${{ github.workspace }}/Artifacts
+        path: ${{github.workspace}}/Artifacts
         merge-multiple: true
 
     - name: Install dotnet sign
@@ -64,7 +64,7 @@ jobs:
         --trusted-signing-certificate-profile ImageMagick `
         --trusted-signing-endpoint https://eus.codesigning.azure.net `
         --verbosity information
-      working-directory: ${{ github.workspace }}/Artifacts
+      working-directory: ${{github.workspace}}/Artifacts
 
     - name: Create Configs archive
       shell: cmd
@@ -84,12 +84,5 @@ jobs:
         git push origin $release
 
     - name: Publish release
-      uses: softprops/action-gh-release@v2
-      with:
-        name: ${{ env.release }}
-        tag_name: ${{ env.release }}
-        files: |
-          ${{ github.workspace }}/Artifacts/Configure.Release.x64.exe
-          ${{ github.workspace }}/Artifacts/Configure.Release.arm64.exe
-          ${{ github.workspace }}/Artifacts/Configure.Release.x86.exe
-          ${{ github.workspace }}/files.zip
+      shell: bash
+      run: gh release create ${{env.release}} --title "Release ${{env.release}}"  ${{github.workspace}}/Artifacts/Configure.Release.x64.exe ${{github.workspace}}/Artifacts/Configure.Release.arm64.exe ${{github.workspace}}/Artifacts/Configure.Release.x86.exe ${{github.workspace}}/files.zip
