Use a command prompt instead to execute the command.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -84,7 +84,7 @@ jobs:
         git push origin $release
 
     - name: Publish release
-      shell: bash
+      shell: cmd
       env:
         GH_TOKEN: ${{github.token}}
-      run: gh release create ${{env.release}} --title "Release ${{env.release}}"  ${{github.workspace}}/Artifacts/Configure.Release.x64.exe ${{github.workspace}}/Artifacts/Configure.Release.arm64.exe ${{github.workspace}}/Artifacts/Configure.Release.x86.exe ${{github.workspace}}/files.zip
+      run: gh release create ${{env.release}} --title "Release ${{env.release}}"  ${{github.workspace}}\Artifacts\Configure.Release.x64.exe ${{github.workspace}}\Artifacts\Configure.Release.arm64.exe ${{github.workspace}}\Artifacts\Configure.Release.x86.exe ${{github.workspace}}\files.zip
