Added option to also write the non windows licenses to the license artifacts folder.

--- a/src/Configure.vcxproj
+++ b/src/Configure.vcxproj
@@ -126,6 +126,7 @@
   <ItemGroup>
     <ClCompile Include="Config.cpp" />
     <ClCompile Include="Configs.cpp" />
+    <ClCompile Include="Licence.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Options.cpp" />
     <ClCompile Include="InstallerConfig.cpp" />
@@ -173,6 +174,7 @@
   <ItemGroup>
     <ClInclude Include="Config.h" />
     <ClInclude Include="Configs.h" />
+    <ClInclude Include="License.h" />
     <ClInclude Include="Options.h" />
     <ClInclude Include="InstallerConfig.h" />
     <ClInclude Include="MagickBaseConfig.h" />
