--- a/src/Configure.vcxproj.filters
+++ b/src/Configure.vcxproj.filters
@@ -28,6 +28,8 @@
     <ClCompile Include="Notice.cpp" />
     <ClCompile Include="InstallerConfig.cpp" />
     <ClCompile Include="WaitDialog.cpp" />
+    <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Licence.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CommandLineInfo.h" />
@@ -59,6 +61,7 @@
     <ClInclude Include="Notice.h" />
     <ClInclude Include="InstallerConfig.h" />
     <ClInclude Include="WaitDialog.h" />
+    <ClInclude Include="License.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Configure.rc" />
